--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#about</h1>
-<p>This is some very limited information about this app</p>
+<h1>About page</h1>
+<p>This is some very limited information about this site</p>
