--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,3 @@
-<h1>StaticPages#contact</h1>
+<h1>Contact page</h1>
 <p>my contact details are as follows</p>
 <p> Jan-Hermen Ploeg / <br>671981@gmail.com</p>
