--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#index</h1>
-<p>Welcome! The date and time is <%= Time.now %></p>
+<h2>Welcome</h2>
+<p>These are local bikes</p>
+<p> <%= image_tag("bike.png") %> </p>
