--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Elephant</title>
+  <title>Bikes</title>
   
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Amsterdam Bikes</a>
+      <a class="navbar-brand" href="#">Bikes</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,7 +41,7 @@
 <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Amsterdam Bikes. Local Bikes</h1>
+        <h1>Local Bikes</h1>
       </div>
       <%= yield %>
     </div>
