--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,15 +4,7 @@
 
 <div class="container">
     <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-md-4">
-        <p><h2><%= product.name %></h2></p>
-        <p><%= product.description %></p>
-        <p id="url"><%= product.image_url %></p>
-        <p><%= product.colour %></p>  
-        <p><%= link_to 'Show', product %> | <%= link_to 'Edit', edit_product_path(product) %> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      </div>
-      <% end %>
+    <%= render @products %>
 </div>
 </div>  
 
