--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,13 @@
         <li><%= link_to "About", static_pages_about_path %></li>
         <li><%= link_to "Contact", static_pages_contact_path %></li>
       </ul>
+      <div class="navbar-form navbar-left" role="search">
+         <%= form_tag("/products", method: "get") do %>
+              <!--<%= label_tag(:q, "Search for") %> -->
+              <%= text_field_tag(:q) %>
+              <%= submit_tag("Search") %>
+            <% end %><!-- form_tag -->
+      </div>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
