--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,4 +10,10 @@
 
 <br>
 
+<%= form_tag("/products", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
 <%= link_to 'New Product', new_product_path %>
