--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,22 @@
 <h1>Contact page</h1>
-<p>my contact details are as follows</p>
-<p> Jan-Hermen Ploeg / <br>671981@gmail.com</p>
+<%= flash[:notice] %>
+
+<%= form_tag("/static_pages/thank_you") do %>
+<div class="row">
+    <div class="col-md-4">
+        <div class="form-group">
+            <%= label_tag :name, "Name" %>
+            <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+        </div>      
+        <div class="form-group">
+            <%= label_tag :email, "Email Address" %>
+            <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+        </div>
+        <div class="form-group">
+            <%= label_tag :message, "Message" %>
+            <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+        </div>      
+    </div>
+</div>
+<%= submit_tag "Send" %>   
+<% end %>
