--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,9 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
 <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
