--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,15 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+
+  <% if notice %>
+    <p id="notice" class="alert alert-info"><%= notice %></p>
+<% end %>
+  
+  <% if alert %>
+    <p id="alert" class="alert alert-warning"><%= alert %></p>
+<% end %>
+
 
 <!-- Begin page content -->
     <div class="container">
