--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Products</h1>
+<h1>These are all products</h1>
 
 <div class="container">
     <div class="row">
     <%= render @products %>
-</div>
+	</div>
 </div>  
 
-<br>
 
 
 
