--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <h3>Name:</h3>
   <%= @product.name %>
 </p>
 
@@ -13,6 +13,7 @@
 <p>
   <strong>Image url:</strong>
   <%= @product.image_url %>
+  <%=image_tag(@product.image_url, class: "img-responsive") %>
 </p>
 
 <p>
