ex 43 comments controller and views

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,8 +27,8 @@
     <%= f.label :colour %><br>
     <%= f.text_field :colour, class: "form-control"  %>
   </div>
-  <!-- <div class="actions"> -->
+  <div class="actions">
     <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
-  <!-- </div> -->
+  </div>
   
 <% end %>
