--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,10 @@
 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 <hr>
 
+
+<%= form_tag "/payments/create" do %>
+  <%= render partial: "shared/stripe_checkout_button" %>
+<% end %>
 <%= render 'new_comment' %>
 <%= render 'reviews' %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
