--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :colour %><br>
     <%= f.text_field :colour, class: "form-control"  %>
   </div>
+  <div class="form-group">
+    <%= f.label :price %><br>
+    <%= f.text_field :price, class: "form-control"  %>
+  </div>
   <div class="actions">
     <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
   </div>
