--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -2,5 +2,7 @@
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-name="<%= @product.name %>"
-  data-description="<%= @product.description %>">
+  data-description="<%= @product.description %>"
+  data-amount="<%= (@product.price.to_f * 100).to_i %>"> 
 </script>
+
