--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,8 +3,12 @@
 <h1>These are all products</h1>
 
 <div class="container">
+    <% cache(cache_key_for_products) do %>
     <div class="row">
+    <% cache(p) do %>
     <%= render @products %>
+    <% end %>
+    <% end %>
 	</div>
 </div>  
 
